--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "@next/font": "13.1.4",
+    "@prisma/client": "^4.9.0",
     "@types/node": "18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.4",
+    "iron-session": "^6.3.1",
     "next": "13.1.4",
+    "nodemailer": "^6.9.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.0",
+    "recoil": "^0.7.6",
+    "swr": "^2.0.3",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4"
   },
   "devDependencies": {
@@ -25,6 +33,8 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.9.0",
+    "tailwind-scrollbar": "^2.1.0",
     "tailwindcss": "^3.2.4"
   }
 }
